<resources>
    <string name="app_name">Homework8Hero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_list_of_heroes">Список Супергеров</string>
    <string name="label_full_name">Полное имя:</string>
    <string name="label_publisher">Создатель:</string>
    <string name="label_place_of_birth">Место рождения:</string>
    <string name="label_aliases">Псевдонимы:</string>
    <string name="logo_of_hero">logo of hero</string>

    <string name="label_name">Имя:</string>
    <string name="default_name">Данияр</string>
    <string name="default_created_date">18.06.2022</string>
    <string name="default_git_hub"><a href="https://github.com/DanKaz-2019">DanKaz-2019</a></string>
    <string name="label_created_date">Дата создания:</string>
    <string name="label_github">GitHub:</string>
    <string name="about">About</string>
    <string name="about_app">О приложении</string>
    <string name="src_button_back">button back</string>
    <string name="no_network_connection">Нет соединения с Интернетом</string>
</resources>